# deltars-adls2

./: Cargo.toml
data/simple_table/: part-00150-ec6643fc-4963-4871-9613-f5ad1940b689-c000.snappy.parquet:Zone.Identifier
src/: main.rs
